--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,5 @@
+node_modules
 .DS_Store
-/node_modules
-npm-debug.log
-.vscode
-.editorconfig
+docs/_book
+test/
 .idea/
-package-lock.json
-yarn.lock
-yarn-error.log
-dist/
-static/dll
